tests/negative/Test1.sp
(* Wrong type operators *)
pi4:Int = 2.0;
pi:Int= pi4 * 3;
a:String = "2568dawd";
pi2:Int = a * 3;
(* Wrong type operators2 *)